recursion.logo.koch.PentaKoch.scala.error
Compilation error:
PentaKoch:7: error: not found: value spentaKoch
    spentaKoch(levels-1,length*0.4);
    ^