recursion.logo.koch.PentaKoch.scala.code
def pentaKoch(levels:Int, length:Double) {
  if(levels==0){
    forward(length)
  }else{
    pentaKoch(levels-1,length*0.4);
    left(108);
    spentaKoch(levels-1,length*0.4);
    right(72);
    pentaKoch(levels-1,length*0.4);
    right(72);
    pentaKoch(levels-1,length*0.4);
    right(72);
    pentaKoch(levels-1,length*0.4);
    left(108);
    pentaKoch(levels-1,length*0.4)
  }
}